--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </div>
     </main>
 
-    <div class="attribution">
+    <footer class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
@@ -69,6 +69,6 @@
       <a href="https://github.com/IsaiasVillegas" target="_blank"
         >Isaias Villegas</a
       >.
-    </div>
+    </footer>
   </body>
 </html>
